Receipts: Style overflow fixes
- Filter section and table title change

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -119,6 +119,32 @@ body.lang_es {
   }
 
 
+  #ReceiptsPage {
+    .filter-options {
+      .span5 {
+        width: 120px;
+        margin-top: -14px;
+      }
+      .span7 {
+        width: 232px;
+      }
+
+      .range-end {
+        width: 125px;
+      }
+    }
+
+    @media (min-width: 1120px) {
+      .filter-options {
+        .span5 {
+          width: 160px;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+
+
   #AuctionDashboardPage {
     @media (max-width: 1090px) {
 
