--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -133,6 +133,28 @@ body.lang_fr_CA {
   }
 
 
+  #ReceiptsPage {
+    .filter-options {
+      .span5 {
+        width: 120px;
+        margin-top: -14px;
+      }
+      .span7 {
+        width: 232px;
+      }
+    }
+
+    @media (min-width: 1150px) {
+      .filter-options {
+        .span5 {
+          width: 170px;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+
+
   #ProfileSettingsPage, #AccountManagementPage {
     @media (max-width: 1090px) {
 
@@ -150,5 +172,10 @@ body.lang_fr_CA {
       }
 
     }
+  }
+
+  /* Modals */
+  [name='searchControls'] > .span4 > label {
+    white-space: nowrap;
   }
 }
